I resolved some spacing and sizing images

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 header {
   background: var(--uri-gray);
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   gap: 3rem;
   padding: 2rem;
@@ -177,7 +177,7 @@ footer {
 }
 
 .footer-img {
-  width: 35%;
+  width: 25%;
   border: 8px solid var(--uri-dk-trans);
   border-radius: 50%;
   box-shadow: 8px 8px 12px var(--uri-black);
@@ -241,12 +241,8 @@ address {
     transform-origin: 0% 0%;
   }
   
-  .hero-img {
-    max-width: 1000px;
-  }
-  
   .my-projects>div {
-    max-width: 1000px;
+    max-width: 1440px;
   }
   
   .my-projects>div:hover {
